--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-API_ID=
-API_HASH=
-TOKEN=
+API_ID=23786344
+API_HASH=90decd3d66ff2bbb1d0ade8bde0b71b0
+TOKEN=7479224374:AAEiseU2BfMem45dAwQcOYjVpvkG0wPcOJU
